force-app/main/default/objects/PTW_Header__c.object
<CustomObject>
    <fields>
        <fullName>Auditor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(Auditor) Name</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>PTW Header</relationshipLabel>
        <relationshipName>PTW_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Permit_to_work__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Count Permit to work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Auditor_Name__r.SECTIONS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_for_Verification__c</fullName>
        <formula>Verification_Name__r.SECTIONS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department for Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormName__c</fullName>
        <label>FormName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <formula>Auditor_Name__r.User__r.Main_Work_Center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_of_Verification__c</fullName>
        <formula>Verification_Name__r.User__r.Main_Work_Center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center of Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>ดำเนินการได้</fullName>
                </value>
                <value>
                    <fullName>หยุดงานชั่วคราว</fullName>
                </value>
                <value>
                    <fullName>หยุดงานถาวร</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Stop_Work__c</fullName>
        <formula>IF(OR(ISPICKVAL(Status__c ,&apos;หยุดงานชั่วคราว&apos;),ISPICKVAL(Status__c ,&apos;หยุดงานถาวร&apos;)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stop Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PTW_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verification_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ชื่อผู้ทำ PTW Verfication</description>
        <label>Verification Name</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>PTW Header (Verfication Name)</relationshipLabel>
        <relationshipName>PTW_Header1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Clearance</label>
        <referenceTo>Work_Clearance__c</referenceTo>
        <relationshipLabel>PTW Header</relationshipLabel>
        <relationshipName>PTW_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PTW Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FormName__c</columns>
        <columns>Key__c</columns>
        <columns>Status__c</columns>
        <columns>Main_Work_Center_of_Verification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FormName__c</field>
            <operation>equals</operation>
            <value>Verification</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>FormName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FormName__c</field>
            <operation>equals</operation>
            <value>Verification</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/14/2022 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTWH - {0000}</displayFormat>
        <label>PTW Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Inspection</fullName>
        <active>true</active>
        <label>Inspection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verification</fullName>
        <active>true</active>
        <label>Verification</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>